tests/machine/x/c/in_operator_extended.error
line: 0
error: cc error: exit status 1
/workspace/mochi/tests/machine/x/c/in_operator_extended.c: In function ‘main’:
/workspace/mochi/tests/machine/x/c/in_operator_extended.c:63:21: error: expected ‘)’ before ‘in’
   63 |   printf("%d\n", "a" in m);
      |         ~           ^~~
      |                     )
/workspace/mochi/tests/machine/x/c/in_operator_extended.c:63:12: warning: format ‘%d’ expects argument of type ‘int’, but argument 2 has type ‘char *’ [-Wformat=]
   63 |   printf("%d\n", "a" in m);
      |           ~^     ~~~
      |            |     |
      |            int   char *
      |           %s
/workspace/mochi/tests/machine/x/c/in_operator_extended.c:64:21: error: expected ‘)’ before ‘in’
   64 |   printf("%d\n", "b" in m);
      |         ~           ^~~
      |                     )
/workspace/mochi/tests/machine/x/c/in_operator_extended.c:64:12: warning: format ‘%d’ expects argument of type ‘int’, but argument 2 has type ‘char *’ [-Wformat=]
   64 |   printf("%d\n", "b" in m);
      |           ~^     ~~~
      |            |     |
      |            int   char *
      |           %s
/workspace/mochi/tests/machine/x/c/in_operator_extended.c:65:23: error: expected ‘)’ before ‘in’
   65 |   printf("%d\n", "ell" in s);
      |         ~             ^~~
      |                       )
/workspace/mochi/tests/machine/x/c/in_operator_extended.c:65:12: warning: format ‘%d’ expects argument of type ‘int’, but argument 2 has type ‘char *’ [-Wformat=]
   65 |   printf("%d\n", "ell" in s);
      |           ~^     ~~~~~
      |            |     |
      |            int   char *
      |           %s
/workspace/mochi/tests/machine/x/c/in_operator_extended.c:66:23: error: expected ‘)’ before ‘in’
   66 |   printf("%d\n", "foo" in s);
      |         ~             ^~~
      |                       )
/workspace/mochi/tests/machine/x/c/in_operator_extended.c:66:12: warning: format ‘%d’ expects argument of type ‘int’, but argument 2 has type ‘char *’ [-Wformat=]
   66 |   printf("%d\n", "foo" in s);
      |           ~^     ~~~~~
      |            |     |
      |            int   char *
      |           %s

   1: #include <stdio.h>
